--- a/config.json
+++ b/config.json
@@ -5,6 +5,5 @@
   "db:password": "root",
   "src:path": "/Users/xxx/Desktop/project/src/main/kotlin",
   "src:package": "com.xxx.spring.database.model",
-  "jpa:generation-type": "auto",
-  "kotlin:no-arg":true
+  "jpa:generation-type": "auto"
 }
